--- a/src/Belletrix.Web/Views/Home/Index.cshtml
+++ b/src/Belletrix.Web/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
 @using Belletrix.Entity.Enum;
 @using Belletrix.Entity.ViewModel;
 
+@model DashboardViewModel
+
 @{
     ViewBag.Title = "Index";
 }
@@ -13,48 +15,56 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title"><i class="glyphicon glyphicon-time"></i> Recent Activity</h3>
                 </div>
                 <div class="panel-body">
                     <div class="list-group">
-                        @foreach (EventLogViewModel eventLog in ViewBag.RecentActivity)
+                        @foreach (EventLogViewModel eventLog in Model.RecentActivity)
                         {
-                            string action = String.Empty;
+                            string action = string.Empty;
                             string personName = eventLog.Student.FirstName + " " + eventLog.Student.LastName;
                             bool modifiedByRealUser = eventLog.ModifiedById != default(int);
-                            string iconClass = String.Empty;
-                            
+                            string iconClass = string.Empty;
+                            string anchorLinkUrl = anchorLinkUrl = Url.Action("View", "Student", new { id = eventLog.Student.Id });
+
                             switch (eventLog.Type)
                             {
                                 case (int)EventLogTypes.AddStudent:
                                     action = "added";
                                     iconClass = modifiedByRealUser ? "glyphicon-plus" : "glyphicon-certificate";
                                     break;
-                                    
+
                                 case (int)EventLogTypes.EditStudent:
                                     action = "modified";
                                     iconClass = "glyphicon-edit";
                                     break;
-                                    
+
                                 case (int)EventLogTypes.AddStudentExperience:
                                     action = "created experience for";
                                     iconClass = "glyphicon-plane";
                                     break;
-                                    
+
                                 case (int)EventLogTypes.AddStudentNote:
                                     action = "commented on";
                                     iconClass = "glyphicon-comment";
                                     break;
                             }
 
+                            if (string.IsNullOrEmpty(action))
+                            {
+                                anchorLinkUrl = "#";
+                            }
+
                             string eventBy = !modifiedByRealUser ? "System" : eventLog.ModifiedByFirstName;
-                            
-                            <a href="#" class="list-group-item" title="@eventBy @action @personName">
+
+                            <a href="@anchorLinkUrl" class="list-group-item" title="@eventBy @action @personName">
                                 <i class="glyphicon @iconClass"></i> @personName
-                                <span class="pull-right text-muted small" title="@eventLog.EventDate.ToString("dddd, MMMM d, yyyy \\a\\t h:mm tt")"><em>@DateTimeFilter.CalculateRelativeDate(eventLog.EventDate)</em></span>
+                                <span class="badge" title="@eventLog.EventDate.ToString("dddd, MMMM d, yyyy \\a\\t h:mm tt")">
+                                    @eventLog.RelativeDate
+                                </span>
                             </a>
                         }
                     </div>
@@ -62,10 +72,6 @@
             </div>
         </div>
 
-        <div class="col-lg-4">
-        </div>
-
-        <div class="col-lg-4">
-        </div>
+        <div class="col-lg-6"></div>
     </div>
 }
