--- a/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
+++ b/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
@@ -1,98 +1,14 @@
-﻿@using Belletrix.Core;
-@using Belletrix.Entity.Enum;
-@using Belletrix.Entity.Model;
-@using System.Linq;
+﻿@using Belletrix.Entity.Model;
 
 @model IEnumerable<StudyAbroadModel>
 
+@{ 
+    Html.ViewData.Add(new KeyValuePair<string, object>("ShowStudent", false));
+}
+
 <div>
     <br />
-    <table id="studyabroad" class="table table-bordered table-hover table-striped tablesorter">
-        <thead>
-            <tr>
-                <th>Year</th>
-                <th>Semester</th>
-                <th>Starting</th>
-                <th>Ending</th>
-                <th>Credit</th>
-                <th>Internship</th>
-                <th>Country</th>
-                <th>City</th>
-                <th>Program</th>
-                <th>Types</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (StudyAbroadModel study in Model)
-            {
-                CountryModel selectedCountry = (ViewBag.Countries as List<CountryModel>).FirstOrDefault(c => c.Id == study.CountryId);
-                string countryName = String.Empty;
-                
-                if (selectedCountry != null)
-                {
-                    countryName = selectedCountry.Name;
-                }
-
-                ProgramModel selectedProgram = (ViewBag.Programs as List<ProgramModel>).FirstOrDefault(p => p.Id == study.ProgramId);
-                string programName = String.Empty;
-                
-                if (selectedProgram != null)
-                {
-                    programName = selectedProgram.Name;
-                }
-
-                List<string> programTypes = new List<string>();
-                
-                foreach (int type in study.ProgramTypes)
-                {
-                    ProgramTypeModel programType = (ViewBag.ProgramTypes as List<ProgramTypeModel>).FirstOrDefault(p => p.Id == type);
-                    
-                    if (programType != null)
-                    {
-                        programTypes.Add(programType.Name);
-                    }
-                }
-                
-                <tr>
-                    <td>@study.Year</td>
-                    <td>@Formatter.StudyAbroadPeriodString(study.Semester)</td>
-                    <td>
-                        @if (study.StartDate.HasValue)
-                        {
-                            @DateTimeFilter.UtcToLocal(study.StartDate.Value).ToShortDateString()
-                        }
-                    </td>
-                    <td>
-                        @if (study.EndDate.HasValue)
-                        {
-                            @DateTimeFilter.UtcToLocal(study.EndDate.Value).ToShortDateString()
-                        }
-                    </td>
-                    <td>
-                        @if (study.CreditBearing)
-                        {
-                            <i class="glyphicon glyphicon-ok"></i>
-                        }
-                    </td>
-                    <td>
-                        @if (study.Internship)
-                        {
-                            <i class="glyphicon glyphicon-ok"></i>
-                        }
-                    </td>
-                    <td>@countryName</td>
-                    <td>
-                        @if (!String.IsNullOrEmpty(study.City))
-                        {
-                            @study.City
-                        }
-                    </td>
-                    <td>@programName</td>
-                    <td>@String.Join(", ", programTypes)</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    @Html.Partial("StudyAbroadList.Partial", Model, Html.ViewData)
 </div>
 
 <div class="row">
