--- a/src/Belletrix.Web/Views/Student/Edit.cshtml
+++ b/src/Belletrix.Web/Views/Student/Edit.cshtml
@@ -14,9 +14,9 @@
             var student = new Belletrix.Student();
             student.initStudentAddEdit();
             student.addStudyAbroadRows(
-                [@String.Join(",", Model.StudyAbroadCountry)],
-                [@String.Join(",", Model.StudyAbroadYear)],
-                [@String.Join(",", Model.StudyAbroadPeriod)]
+                [@string.Join(",", Model.StudyAbroadCountry)],
+                [@string.Join(",", Model.StudyAbroadYear)],
+                [@string.Join(",", Model.StudyAbroadPeriod)]
             );
 
             Belletrix.Common.singleSubmit();
