Fix "Unexpected 'string' keyword after '@' character" Razor error
Introduced in d568ee1bf736d64a3f113c2bf1c2d957d753278d

--- a/src/Belletrix.Web/Views/Student/View.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.Partial.cshtml
@@ -65,7 +65,7 @@
                                 <div>
                                     @if (programTypes != null && programTypes.Count > 0)
                                     {
-                                        @string.Join(", ", programTypes)
+                                        @String.Join(", ", programTypes)
                                     }
                                 </div>
                             </div>
