Strip Bootstrap styles on DataTable tables (redundant)

--- a/src/Belletrix.Web/Views/ActivityLog/List.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/List.cshtml
@@ -44,7 +44,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <table id="activitylist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
+            <table id="activitylist" class="display">
                 <thead>
                     <tr>
                         <th>Title</th>
