--- a/src/Belletrix.Web/Views/Student/List.cshtml
+++ b/src/Belletrix.Web/Views/Student/List.cshtml
@@ -71,7 +71,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <table id="studentlist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
+            <table id="studentlist" class="display">
                 <thead>
                     <tr>
                         <th>Name</th>
