--- a/src/Belletrix.Web/Views/Student/StudyAbroadList.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/StudyAbroadList.Partial.cshtml
@@ -7,7 +7,7 @@
     bool showStudent = ViewData.ContainsKey("ShowStudent") && (bool)ViewData["ShowStudent"];
 }
 
-<table id="experiencelist" class="table table-bordered table-hover table-striped tablesorter">
+<table id="experiencelist" class="display">
     <thead>
         <tr>
             @if (showStudent)
