--- a/src/Belletrix.Web/Views/Promo/Info.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Info.cshtml
@@ -63,7 +63,7 @@
         <div class="col-lg-12">
             @if (Model.TotalStudents > 0)
             {
-                <table id="studentlist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
+                <table id="studentlist" class="display">
                     <thead>
                         <tr>
                             <th>Name</th>
