--- a/src/Belletrix.Web/Views/Promo/List.cshtml
+++ b/src/Belletrix.Web/Views/Promo/List.cshtml
@@ -41,7 +41,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <table id="promolist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
+            <table id="promolist" class="display">
                 <thead>
                     <tr>
                         <th>Description</th>
