--- a/src/Belletrix.Web/Views/User/List.cshtml
+++ b/src/Belletrix.Web/Views/User/List.cshtml
@@ -34,7 +34,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <table id="userlist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
+            <table id="userlist" class="display">
                 <thead>
                     <tr>
                         <th>Name</th>
