--- a/src/Belletrix.Web/Views/User/List.cshtml
+++ b/src/Belletrix.Web/Views/User/List.cshtml
@@ -34,7 +34,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <table id="userlist" class="display">
+            <table id="userlist" class="display table-condensed">
                 <thead>
                     <tr>
                         <th>Name</th>
