Fix JavaScript error

--- a/src/Belletrix.Web/Views/Experience/Add.cshtml
+++ b/src/Belletrix.Web/Views/Experience/Add.cshtml
@@ -11,7 +11,7 @@
         $(function () {
             'use strict';
 
-            Belletrix.handleMvcEditor();
+            Belletrix.Common.handleMvcEditor();
 
             $('.multiselect').multiselect({
                 numberDisplayed: 1,
