--- a/src/Belletrix.Web/Views/Student/StudyAbroadList.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/StudyAbroadList.Partial.cshtml
@@ -3,7 +3,7 @@
 
 @model IEnumerable<StudyAbroadModel>
 
-@{ 
+@{
     bool showStudent = ViewData.ContainsKey("ShowStudent") && (bool)ViewData["ShowStudent"];
 }
 
@@ -22,6 +22,7 @@
             <th>Internship</th>
             <th>Country</th>
             <th>Program</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -90,7 +91,32 @@
                 </td>
                 <td>@countryName</td>
                 <td>@programName</td>
+                <td>
+                    <button type="button" class="btn btn-xs btn-danger"
+                        data-toggle="modal" data-target="#deleteconfirm"
+                        data-experienceid="@study.Id">
+                        <i class="glyphicon glyphicon-trash"></i>
+                    </button>
+                </td>
             </tr>
         }
     </tbody>
 </table>
+
+<div class="modal fade" id="deleteconfirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
+            </div>
+            <div class="modal-body">
+                Really delete experience?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
