--- a/src/Belletrix.Web/Views/Student/View.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.Partial.cshtml
@@ -182,12 +182,23 @@
                             <i class="glyphicon glyphicon-book"></i>
                             @notes
                         </a>
+
                         <a href="@Url.Action("Edit", "Student", new { id = Model.Id })"
                             class="btn btn-sm btn-default studentlisttooltop" data-placement="top"
                             title="Edit">
                             <i class="glyphicon glyphicon-pencil"></i>
                             Edit
                         </a>
+
+                        if (ViewBag.CanUserDeleteStudents)
+                        {
+                            <button type="button" class="btn btn-sm btn-danger"
+                                data-toggle="modal" data-target="#deleteconfirm"
+                                data-studentid="@Model.Id">
+                                <i class="glyphicon glyphicon-trash"></i>
+                                Delete
+                            </button>
+                        }
                     }
                 </div>
             </div>
