--- a/src/Belletrix.Web/Views/Student/View.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.cshtml
@@ -10,6 +10,7 @@
     <script>
         $(function () {
             new Belletrix.StudentNote();
+            Belletrix.Common.handleDeleteModal('#deleteconfirm', '@Url.Action("Delete", "Student")', 'studentid');
         });
     </script>
 }
@@ -17,4 +18,22 @@
 @section Body {
     <br />
     @Html.Partial("View.Partial", Model)
+
+    <div class="modal fade" id="deleteconfirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
+                </div>
+                <div class="modal-body">
+                    Really delete student?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
 }
