Change all delete functions to use Bootbox
No sense in reinventing the wheel. Somehow forgot we don't use the stock
Bootstrap modal when there's Bootbox to make life easy.

--- a/src/Belletrix.Web/Views/Student/Edit.cshtml
+++ b/src/Belletrix.Web/Views/Student/Edit.cshtml
@@ -24,7 +24,7 @@
             student.initStudyAbroadTab('#studyabroadtab',
                 '@Url.Action("StudyAbroad", new { id = Model.Id })',
                 '#experiencelist',
-                '#deleteconfirm', '@Url.Action("Delete", "Experience")', 'experienceid');
+                '@Url.Action("Delete", "Experience")', 'experienceid');
         });
     </script>
 }
