--- a/src/Belletrix.Web/Views/Student/View.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.Partial.cshtml
@@ -192,8 +192,7 @@
 
                         if (ViewBag.CanUserDeleteStudents)
                         {
-                            <button type="button" class="btn btn-sm btn-danger"
-                                data-toggle="modal" data-target="#deleteconfirm"
+                            <button type="button" class="btn btn-sm btn-danger student-view-delete"
                                 data-studentid="@Model.Id">
                                 <i class="glyphicon glyphicon-trash"></i>
                                 Delete
