--- a/src/Belletrix.Web/Views/Experience/List.cshtml
+++ b/src/Belletrix.Web/Views/Experience/List.cshtml
@@ -25,8 +25,7 @@
                 ]
             });
 
-            new Belletrix.Experience().bindDelete('#deleteconfirm',
-                '@Url.Action("Delete", "Experience")', 'experienceid');
+            new Belletrix.Experience().bindDelete('@Url.Action("Delete", "Experience")', 'experienceid');
         });
     </script>
 }
