--- a/src/Belletrix.Web/Views/Student/List.cshtml
+++ b/src/Belletrix.Web/Views/Student/List.cshtml
@@ -11,7 +11,7 @@
     <script>
         $(function () {
             new Belletrix.Student().initStudentList('#studentlist',
-                '#deleteconfirm', '@Url.Action("Delete", "Student")', 'studentid');
+                '@Url.Action("Delete", "Student")', 'studentid');
         });
     </script>
 }
@@ -132,8 +132,7 @@
 
                                     @if (ViewBag.CanUserDeleteStudents)
                                     {
-                                        <button type="button" class="btn btn-xs btn-danger"
-                                            data-toggle="modal" data-target="#deleteconfirm"
+                                        <button type="button" class="btn btn-xs btn-danger student-list-delete"
                                             data-studentid="@student.Id">
                                             <i class="glyphicon glyphicon-trash"></i>
                                         </button>
@@ -158,22 +157,4 @@
             <a href="mailto:@string.Join(";", emailableStudents)">Send email to student list</a>
         }
     }
-
-    <div class="modal fade" id="deleteconfirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
-                </div>
-                <div class="modal-body">
-                    Really delete student?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger">Delete</button>
-                </div>
-            </div>
-        </div>
-    </div>
 }
