--- a/src/Belletrix.Web/Views/Student/StudyAbroadList.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/StudyAbroadList.Partial.cshtml
@@ -92,8 +92,7 @@
                 <td>@countryName</td>
                 <td>@programName</td>
                 <td>
-                    <button type="button" class="btn btn-xs btn-danger"
-                        data-toggle="modal" data-target="#deleteconfirm"
+                    <button type="button" class="btn btn-xs btn-danger experience-list-delete"
                         data-experienceid="@study.Id">
                         <i class="glyphicon glyphicon-trash"></i>
                     </button>
@@ -102,21 +101,3 @@
         }
     </tbody>
 </table>
-
-<div class="modal fade" id="deleteconfirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
-            </div>
-            <div class="modal-body">
-                Really delete experience?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
