--- a/src/Belletrix.Web/Views/Student/View.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.cshtml
@@ -9,8 +9,9 @@
 @section FooterScript {
     <script>
         $(function () {
+            new Belletrix.Student().initView('@Url.Action("Delete", "Student")', 'studentid',
+                '@Url.Action("List", "Student")');
             new Belletrix.StudentNote();
-            Belletrix.Common.handleDeleteModal('#deleteconfirm', '@Url.Action("Delete", "Student")', 'studentid');
         });
     </script>
 }
@@ -18,22 +19,4 @@
 @section Body {
     <br />
     @Html.Partial("View.Partial", Model)
-
-    <div class="modal fade" id="deleteconfirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
-                </div>
-                <div class="modal-body">
-                    Really delete student?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger">Delete</button>
-                </div>
-            </div>
-        </div>
-    </div>
 }
