--- a/src/Belletrix.Web/Views/User/List.cshtml
+++ b/src/Belletrix.Web/Views/User/List.cshtml
@@ -9,8 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            new Belletrix.User().initUserList('#userlist', '#deleteconfirm',
-                '@Url.Action("Delete", "User")', 'userid');
+            new Belletrix.User().initUserList('#userlist', '@Url.Action("Delete", "User")', 'userid');
         });
     </script>
 }
@@ -73,8 +72,7 @@
                             <td>
                                 @if (user.Id != ViewBag.CurrentUser.Id)
                                 {
-                                    <button type="button" class="btn btn-xs btn-danger"
-                                        data-toggle="modal" data-target="#deleteconfirm"
+                                    <button type="button" class="btn btn-xs btn-danger user-list-delete"
                                         data-userid="@user.Id">
                                         <i class="glyphicon glyphicon-trash"></i>
                                     </button>
@@ -84,25 +82,6 @@
                     }
                 </tbody>
             </table>
-        </div>
-    </div>
-
-    <div class="modal fade" id="deleteconfirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Really delete user?</p>
-                    <p>All existing work they've done will be moved under your name.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger">Delete</button>
-                </div>
-            </div>
         </div>
     </div>
 }
