--- a/src/Belletrix.Web/Views/Promo/List.cshtml
+++ b/src/Belletrix.Web/Views/Promo/List.cshtml
@@ -9,8 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            new Belletrix.Promo().initPromoList('#promolist', '#deleteconfirm',
-                '@Url.Action("Delete", "Promo")');
+            new Belletrix.Promo().initPromoList('#promolist', '@Url.Action("Delete", "Promo")', 'promoid');
         });
     </script>
 }
@@ -80,8 +79,7 @@
 
                                     @if (promo.CanDelete)
                                     {
-                                        <button type="button" class="btn btn-xs btn-danger"
-                                            data-toggle="modal" data-target="#deleteconfirm"
+                                        <button type="button" class="btn btn-xs btn-danger promo-list-delete"
                                             data-promoid="@promo.Id">
                                             <i class="glyphicon glyphicon-trash"></i>
                                         </button>
@@ -92,24 +90,6 @@
                     }
                 </tbody>
             </table>
-        </div>
-    </div>
-
-    <div class="modal fade" id="deleteconfirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Confirm Delete</h4>
-                </div>
-                <div class="modal-body">
-                    Really delete the promo?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger">Delete</button>
-                </div>
-            </div>
         </div>
     </div>
 }
