--- a/src/Belletrix.Web/Views/Student/Add.cshtml
+++ b/src/Belletrix.Web/Views/Student/Add.cshtml
@@ -349,6 +349,13 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-default">Add Student Profile</button>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li><button type="submit" class="btn btn-default">Add Student Profile</button></li>
+                    <li>@Html.ActionLink("Cancel", "List")</li>
+                </ul>
+            </div>
+        </div>
     }
 }
