--- a/src/Belletrix.Web/Views/Student/Edit.cshtml
+++ b/src/Belletrix.Web/Views/Student/Edit.cshtml
@@ -368,7 +368,14 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-default">Save Changes</button>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="list-inline">
+                            <li><button type="submit" class="btn btn-default">Save Changes</button></li>
+                            <li>@Html.ActionLink("Discard Changes", "View", new { id = Model.Id })</li>
+                        </ul>
+                    </div>
+                </div>
             }
         </div>
 
